--- a/CinemaBook/Scence/Booking/ListMovieShowNow/view/cell/itemMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Booking/ListMovieShowNow/view/cell/itemMovieTableViewCell.xib
@@ -8,6 +8,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -45,6 +50,12 @@
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thể loại" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OeP-OI-7p1">
+                                <rect key="frame" x="170" y="81.5" width="50" height="17"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                <color key="textColor" systemColor="systemGray3Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-menu-next" translatesAutoresizingMaskIntoConstraints="NO" id="fMe-tq-2fE">
                                 <rect key="frame" x="288" y="79" width="22" height="22"/>
                                 <constraints>
@@ -55,6 +66,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="OeP-OI-7p1" firstAttribute="leading" secondItem="BOK-JR-xSB" secondAttribute="leading" id="4Sd-lb-0gO"/>
                             <constraint firstItem="BOK-JR-xSB" firstAttribute="top" secondItem="Mw2-wN-bBi" secondAttribute="bottom" id="HJV-Fv-GwC"/>
                             <constraint firstItem="Mw2-wN-bBi" firstAttribute="leading" secondItem="XCZ-Lo-NDb" secondAttribute="leading" id="OTa-p5-Eks"/>
                             <constraint firstItem="fMe-tq-2fE" firstAttribute="centerY" secondItem="4yg-Rz-uGa" secondAttribute="centerY" id="X9E-K3-v4A"/>
@@ -65,6 +77,7 @@
                             <constraint firstItem="VhR-Ru-NJW" firstAttribute="top" secondItem="4yg-Rz-uGa" secondAttribute="top" id="gjj-eu-1vR"/>
                             <constraint firstAttribute="bottom" secondItem="VhR-Ru-NJW" secondAttribute="bottom" id="nLe-TJ-j0r"/>
                             <constraint firstItem="BOK-JR-xSB" firstAttribute="leading" secondItem="Mw2-wN-bBi" secondAttribute="leading" id="rxr-6y-Ip3"/>
+                            <constraint firstItem="OeP-OI-7p1" firstAttribute="top" secondItem="BOK-JR-xSB" secondAttribute="bottom" id="tVo-Hp-Dtb"/>
                             <constraint firstItem="Mw2-wN-bBi" firstAttribute="top" secondItem="XCZ-Lo-NDb" secondAttribute="bottom" constant="8" id="vUC-YU-cQz"/>
                         </constraints>
                     </view>
@@ -124,6 +137,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" systemColor="systemGray3Color"/>
             <connections>
+                <outlet property="lbl_categorymovie" destination="OeP-OI-7p1" id="d6O-ei-Ccs"/>
                 <outlet property="lbl_dateshow" destination="Mw2-wN-bBi" id="J7p-Vk-drb"/>
                 <outlet property="lbl_name" destination="XCZ-Lo-NDb" id="rEk-wX-Gdf"/>
                 <outlet property="lbl_timeshow" destination="BOK-JR-xSB" id="CfM-0q-Pgx"/>
