--- a/CinemaBook/Scence/Booking/BookingChair/view/cell/itemCollectionCell/ItemChairCategoryCollectionViewCell.xib
+++ b/CinemaBook/Scence/Booking/BookingChair/view/cell/itemCollectionCell/ItemChairCategoryCollectionViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,30 +20,39 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0cn-zU-CuS">
                         <rect key="frame" x="0.0" y="17" width="22" height="22"/>
-                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="22" id="Nn3-pU-zhq"/>
                             <constraint firstAttribute="height" constant="22" id="SFM-qp-F28"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNW-Vl-LOx">
-                        <rect key="frame" x="32" y="13" width="40.5" height="30"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                        <rect key="frame" x="24" y="19" width="25" height="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="WNW-Vl-LOx" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="2RJ-dx-eSZ"/>
                 <constraint firstItem="0cn-zU-CuS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Fkh-cv-2jH"/>
                 <constraint firstItem="0cn-zU-CuS" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="NUB-OG-Wqv"/>
-                <constraint firstItem="WNW-Vl-LOx" firstAttribute="leading" secondItem="0cn-zU-CuS" secondAttribute="trailing" constant="10" id="abp-hE-aqT"/>
+                <constraint firstItem="WNW-Vl-LOx" firstAttribute="leading" secondItem="0cn-zU-CuS" secondAttribute="trailing" constant="2" id="abp-hE-aqT"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="112" height="56"/>
+            <connections>
+                <outlet property="lbl_name_chair" destination="WNW-Vl-LOx" id="uki-X6-JH9"/>
+                <outlet property="view_colorchair" destination="0cn-zU-CuS" id="t6j-bb-Bdj"/>
+            </connections>
             <point key="canvasLocation" x="176.81159420289856" y="103.79464285714285"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
