--- a/CinemaBook/Scence/Manager/Management/ManagementRoom/view/cell/ItemRoomTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementRoom/view/cell/ItemRoomTableViewCell.xib
@@ -98,11 +98,21 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1oD-Xf-aJm">
+                        <rect key="frame" x="315" y="0.0" width="5" height="150"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="5" id="Dbm-eI-XKA"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="1oD-Xf-aJm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IfE-rv-TTp"/>
+                    <constraint firstAttribute="bottom" secondItem="1oD-Xf-aJm" secondAttribute="bottom" id="JhC-E8-BmR"/>
                     <constraint firstAttribute="trailing" secondItem="k9G-e8-edx" secondAttribute="trailing" constant="10" id="N5I-ME-BtT"/>
                     <constraint firstItem="k9G-e8-edx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Tac-2W-gBX"/>
                     <constraint firstItem="k9G-e8-edx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="jVQ-Qf-j3B"/>
+                    <constraint firstAttribute="trailing" secondItem="1oD-Xf-aJm" secondAttribute="trailing" id="pC9-nw-qJp"/>
                     <constraint firstAttribute="bottom" secondItem="k9G-e8-edx" secondAttribute="bottom" constant="10" id="yCD-Zk-7UJ"/>
                 </constraints>
             </tableViewCellContentView>
@@ -127,6 +137,9 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
